# mmhub

./: .env  .env.example  AMENITIES-ICONS-FIX.md  AUTH-FIX-GUIDE.md  AUTHENTICATION.md  CLEAN-ICON-LAYOUT.md  DATABASE-UPDATE-README.md  DISABLE-EMAIL-VERIFICATION.md  EMAIL-BOUNCE-RESOLUTION.md  EMAIL-VERIFICATION-FIX.md  GEOLOCATION-GUIDE.md  JAVASCRIPT-ERROR-FIX.md  README.md  RESPONSIVE-LAYOUT-FIX.md  TOUR-SYSTEM-README.md  WARP.md  auth-integration-tests.js  auth-test-comprehensive.html  auto-profile-trigger.sql  bun.lockb  database-migration.sql  fix-email-issue.sh  index.html  mmhub.db  package-lock.json  package.json  sample-data.sql  serve-frontend.mjs  start-all.sh  tailwind.config.ts  test-auth.html  tour-migration.sql  tour-sample-data.sql  vite.config.ts
backend/: .env  .env.example  README.md  alembic.ini  create_complete_database.py  generate_sample_data.py  main.py  mmhub.db  pyproject.toml  requirements.txt  schema.sql  seed_database.py  seed_database_sqlite.py  seeds.sql
backend/alembic/: env.py
backend/alembic/versions/: 20240923_add_is_active_to_amenities.py  20240923_update_property_photos_columns.py  38f2c3b49c10_initial_schema.py
backend/api/v1/: deps.py
backend/api/v1/routes/: admin.py  auth.py  moderation.py  properties.py  users.py
backend/core/: config.py  logging.py  security.py
backend/db/: base.py  session.py
backend/db/models/: __init__.py  amenity.py  flag.py  message.py  property.py  property_amenity.py  property_photo.py  thread.py  user.py
backend/schemas/: auth.py  message.py  property.py  user.py
backend/tests/: conftest.py  test_auth.py  test_properties.py
backend/utils/: geo.py  pagination.py
scripts/: build-with-timeout.sh  dev-with-fallback.sh  serve_spa.py
src/: App-test.tsx  App.tsx  index.css  main.tsx
src/components/: AuthStatus.tsx  (+3 more)
(+43 files in other folders)
